# PineTunnel

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  auth_config.json  licenses.json  pyproject.toml  requirements.txt  seed_demo.py
.github/workflows/: build-dll.yml  build-ea.yml  test.yml
apps/cli/: cloudflare.py  ea_install.py  main.py  proxy.py  service.py
apps/ea/dll/PTWebSocket/: CMakeLists.txt  asyncwebsocketclient.cpp  asyncwebsocketclient.h  ptwebsocket.cpp  ptwebsocket.def  ptwebsocket.rc  resource.h
apps/ea/mt4/: PineTunnel_EA_MT4.ex4  PineTunnel_EA_MT4.mq4
apps/ea/mt4/include/: CombinedActions_MT4.mqh  OrderModifications_MT4.mqh  PTWebSocketClient_MT4.mqh  PartialClose_MT4.mqh  PendingOrders_MT4.mqh  ProductionHardening.mqh
apps/ea/mt5/: PineTunnel_EA.ex5  PineTunnel_EA.mq5  VERSION.json
apps/ea/mt5/include/: CombinedActions.mqh  OrderModifications.mqh  PTWebSocketClient.mqh  PartialClose.mqh  PendingOrders.mqh  ProductionHardening.mqh
apps/ea/pine/: PineTunnel.pine
apps/lib/: env_manager.py  service.py
apps/server/: app_factory.py  main.py  state.py  version.json
apps/server/admin_dashboard/: __init__.py  _harness.html  app.js  dashboard-test.html  index.html  styles.css  tables-test.html
apps/server/admin_dashboard/assets/: manifest.json
apps/server/auth/: session.py  telegram_auth.py
apps/server/config/: health.py  lifespan.py  logging_config.py  reliability.py  settings.py  startup_check.py
apps/server/crypto/: signal_crypto.py
apps/server/db/: analytics_store.py  base.py  mixins.py  postgres.py  replay_store.py  session_store.py  sqlite.py
apps/server/middleware/: ip_validation.py  main.py  rate_limit.py  request_validation.py  security.py
apps/server/models/: trade.py
apps/server/routes/: __init__.py  admin.py  auth.py  dashboard.py  diagnostics.py  ea_download.py  ea_versions.py  health.py  metrics.py  replay.py  signals.py  trade_analytics.py  webhook.py  websocket.py  ws_telemetry.py
apps/server/services/: admin_logger.py  analytics_service.py  auth_manager.py  client_manager.py  mt5_service.py  notification.py  rate_limiter.py  rate_limiter_redis.py  risk_manager.py
apps/server/services/telegram/: __init__.py  bot.py  constants.py  dashboards.py  helpers.py  keyboards.py
apps/server/services/telegram/mixins/: auth.py  conversations.py  events.py  licenses.py  menu.py  monitoring.py  settings.py  signals.py  user_dashboard.py  webhook.py
apps/server/utils/: __init__.py  auth.py  disk.py  security.py  symbol.py  trade_auth.py  version_info.py
apps/server/webhook/: _state.py  executor.py  parser.py  pinetunnel_webhook.py  pipeline.py  signal_queue.py  types.py  validator.py
apps/server/ws/: connection.py  connection_redis.py  handler.py
archived/dashboard/: app.js  index.html
archived/tests/: test_dashboard_security.py
docs/: COMMANDS.md  EA_SETTINGS.md  EA_SETUP.md  FAQ.md  QUICK_START.md  TRADINGVIEW_ALERTS.md  pinetunnel-current-flow-demo.html
docs/superpowers/plans/: 2026-07-18-cloudflare-remotely-managed-tunnel.md  2026-07-19-dashboard-refactor-phase1.md  2026-07-20-telegram-inline-dashboard.md
docs/superpowers/specs/: 2026-07-18-cloudflare-remotely-managed-tunnel-design.md  2026-07-19-dashboard-refactor-design.md  2026-07-20-telegram-inline-dashboard-design.md
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial.py  002_signal_queue_and_runtime.py  003_ws_telemetry_tables.py  004_trades_licensing_and_signal_execution.py  005_bigint_columns.py  006_ea_audit_table.py  007_account_stats_dll_name.py
scripts/: test_migrations.sh
tests/: conftest.py  test_crypto.py  test_dashboard_auth.py  test_dashboard_bot.py  test_dashboard_licenses.py  test_dashboard_risk_diag.py  test_env_manager.py  test_metrics.py  test_parser.py  test_security.py  test_telegram_dashboards.py  test_telegram_helpers.py  test_validator.py
