[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinetunnel"
version = "7.4.5"
description = "Professional Trading Bridge System - PineTunnel EA Service for MT5"
authors = [
    {name = "Fractalyst", email = "contact@pinetunnel.com"},
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["trading", "mt5", "metatrader", "ea", "webhook", "tradingview", "forex", "fastapi", "redis", "websocket"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastapi==0.119.1",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.35",
    "alembic==1.13.2",
    "greenlet>=3.1.0",
    "redis==5.0.1",
    "httpx==0.27.2",
    "python-dateutil==2.9.0",
    "python-dotenv==1.0.1",
    "pydantic-settings==2.2.1",
    "psutil==6.1.0",
    "python-json-logger==2.0.7",
    "python-telegram-bot[job-queue,rate-limiter]>=21.7",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "black", "isort", "mypy"]
postgres = ["asyncpg", "psycopg[binary]>=3.1.0"]
all = ["pinetunnel[dev,postgres]"]

[project.urls]
Homepage = "https://github.com/TheFractalyst/PineTunnel"
Repository = "https://github.com/TheFractalyst/PineTunnel"
Issues = "https://github.com/TheFractalyst/PineTunnel/issues"

[project.scripts]
pinetunnel = "apps.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "assets*", "migrations*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"apps.ea.mt4" = ["*.ex4", "*.mq4", "include/*.mqh"]
"apps.ea.mt5" = ["*.ex5", "*.mq5", "VERSION.json", "include/*.mqh"]
"apps.ea.pine" = ["*.pine"]
"apps.server" = ["version.json"]
"assets" = ["*.svg"]
"migrations" = ["*.py", "*.mako", "*.ini"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | archive
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true


[tool.coverage.run]
source = ["apps"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
